@@ -70,6 +70,12 @@ buildRelease=true
 kotlin.code.style=official
 asfNexusUsername=none
 asfNexusPassword=
+org.gradle.jvmargs=-Xmx2048m \
+  --add-exports jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED \
+  --add-exports jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED \
+  --add-exports jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED \
+  --add-exports jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED \
+  --add-exports jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED
 """
   }
 }
@@ -116,9 +122,7 @@ distributions {
         from rootProject.signArchives.signatureFiles[0]
         from libs.unique(false)
       }
-      into('site') {
-        from rootProject.dokka.outputDirectory
-      }
+
       into('bin') {
         from { project(':gossip').startScripts.outputs.files }
         from { project(':hobbits-relayer').startScripts.outputs.files }
